# MultiCode

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml
api/: __init__.py  models.py  openrouter.py
config/: __init__.py  enterprise.example.toml  settings.py
core/: __init__.py  agent.py  agent_memory.py  audit.py  credentials.py  redact.py  task_classifier.py  ultimate_multi_agent.py  uninstall.py
docs/: README.md  installation.md  quickstart.md
multicode/: __init__.py  main.py
scripts/: check-secrets.sh
tests/: __init__.py  test_credentials.py  test_filesystem.py  test_redact.py  test_shell_tool.py  test_task_classifier.py  test_uninstall.py
tools/: __init__.py  filesystem.py  shell_tool.py
ui/: __init__.py  banners.py  cli.py  model_selector_rich.py
