[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multicode"
version = "1.0.0"
description = "Enterprise-grade Multi-Agent AI Coding Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MultiCode Team"}
]
keywords = ["ai", "coding", "assistant", "cli", "multi-agent", "openrouter", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "keyring>=24.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
multicode = "multicode:run_cli"
multicode-cli = "multicode:run_cli"

[project.urls]
Homepage = "https://github.com/krittaphato3/MultiCode"
Repository = "https://github.com/krittaphato3/MultiCode.git"
Issues = "https://github.com/krittaphato3/MultiCode/issues"
Documentation = "https://github.com/krittaphato3/MultiCode/blob/main/docs/"
Security = "https://github.com/krittaphato3/MultiCode/blob/main/SECURITY.md"
Changelog = "https://github.com/krittaphato3/MultiCode/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["multicode*", "config*", "core*", "tools*", "ui*", "api*", "state*"]

[tool.setuptools.package-data]
multicode = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",   # Line too long (handled by Black)
    "W293",   # Blank line contains whitespace
    "W291",   # Trailing whitespace
    "W292",   # No newline at end of file
    "B904",   # raise without from in except
    "F541",   # f-string without placeholders
    "E722",   # bare except
    "F841",   # unused variables
    "F821",   # undefined names (false positives with dynamic imports)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"multicode/__init__.py" = ["N999"]
"tools/__init__.py" = ["N999"]
"state/__init__.py" = ["N999"]
"ui/__init__.py" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["multicode", "config", "core", "tools", "api", "ui", "state"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
